XML files supported

--- a/LiguoIunivasaliDictionary/LiguoIunivasaliDictionary.csproj
+++ b/LiguoIunivasaliDictionary/LiguoIunivasaliDictionary.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Helper.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Dictionary.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
