--- a/LiguoIunivasaliDictionary/App.config
+++ b/LiguoIunivasaliDictionary/App.config
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LiguoIunivasaliDictionary.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LigouniDictionary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="LiguoIunivasaliDictionary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
+    <userSettings>
+        <LigouniDictionary.Properties.Settings>
+            <setting name="SftpClientAddress" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsKeepTempFile" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </LigouniDictionary.Properties.Settings>
+        <LiguoIunivasaliDictionary.Properties.Settings>
+            <setting name="SftpClientAddress" serializeAs="String">
+                <value />
+            </setting>
+        </LiguoIunivasaliDictionary.Properties.Settings>
+    </userSettings>
 </configuration>
